# archwiki-rs

./: .actrc  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  archwiki-bundler-README.md  archwiki-bundler.json  archwiki-node-README.md  archwiki-node.json  archwiki-web-README.md  archwiki-web.json  archwiki.sh  build.rs  example.sh  pages  release.sh
.github/: dependabot.yml
.github/workflows/: checks.yml  release.yml  rust.yml  update-dependencies.yml
man/man/: archwiki-rs-completions.1  archwiki-rs-list-categories.1  archwiki-rs-list-languages.1  archwiki-rs-list-pages.1  archwiki-rs-local-wiki.1  archwiki-rs-read-page.1  archwiki-rs-search.1  archwiki-rs-sync-wiki.1  archwiki-rs.1  archwiki_rs-completions.1  archwiki_rs-info.1  archwiki_rs-list-categories.1  archwiki_rs-list-languages.1  archwiki_rs-list-pages.1  archwiki_rs-local-wiki.1  archwiki_rs-read-page.1  archwiki_rs-search.1  archwiki_rs-sync-wiki.1  archwiki_rs.1
man/ronn/: archwiki-rs-completions.1.ronn  archwiki-rs-info.1.ronn  archwiki-rs-list-categories.1.ronn  archwiki-rs-list-languages.1.ronn  archwiki-rs-list-pages.1.ronn  archwiki-rs-local-wiki.1.ronn  archwiki-rs-search.1.ronn  archwiki-rs-sync-wiki.1.ronn  archwiki-rs.1.ronn  archwiki_rs-completions.1.ronn  archwiki_rs-info.1.ronn  archwiki_rs-list-categories.1.ronn  archwiki_rs-list-languages.1.ronn  archwiki_rs-list-pages.1.ronn  archwiki_rs-local-wiki.1.ronn  archwiki_rs-read-page.1.ronn  archwiki_rs-search.1.ronn  archwiki_rs-sync-wiki.1.ronn  archwiki_rs.1.ronn
src/: categories.rs  cli.rs  error.rs  info.rs  io.rs  langs.rs  languages.rs  lib.rs  list.rs  main.rs  open_search.rs  pages.rs  search.rs  utils.rs  wasm.rs  wiki_api.rs  wiki_download.rs
src/args/: cli.rs  internal.rs  mod.rs  wasm.rs
src/formats/: html.rs  markdown.rs  mod.rs  plain_text.rs
src/wiki/: api.rs  download.rs  mod.rs
tests/: cli.rs
