[package]
name = "archwiki-rs"
version = "2.2.2"
description = "A CLI tool to read pages from the ArchWiki"
edition = "2021"
authors = ["Lucy Gschwantner lucygschwantner@gmail.com"]
homepage = "https://github.com/Jackboxx/archwiki-rs"
license = "MIT"
repository = "https://github.com/jackboxx/archwiki-rs"
readme = "README.md"
keywords = ["ArchWiki", "cli"]
categories = ["command-line-interface"]

[dependencies]
assert_fs = "1.1.0"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
ego-tree = "0.6.2"
futures = "0.3.30"
html2md = "0.2.14"
human-panic = "1.2.2"
indicatif = "0.17.7"
itertools = "0.12.0"
num_cpus = "1.16.0"
regex = "1.10.2"
reqwest = "0.11.23"
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
serde_yaml = "0.9.29"
termination = "0.1.2"
thiserror = "1.0.53"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
