[package]
name = "archwiki-rs"
version = "3.2.2"
description = "A CLI tool to read pages from the ArchWiki"
edition = "2021"
authors = ["June L. Gschwantner lucygschwantner@gmail.com"]
homepage = "https://gitlab.com/lucifayr/archwiki-rs"
license = "MIT"
repository = "https://gitlab.com/jackboxx/archwiki-rs"
readme = "README.md"
keywords = ["ArchWiki", "cli"]
categories = ["command-line-interface"]

[[bin]]
name = "archwiki-rs"
path = "src/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]
required-features = ["wasm-web"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap_complete", "dep:tokio", "dep:unicode-width", "dep:colored", "dep:indicatif", "dep:directories", "dep:sanitize-filename", "dep:human-panic", "dep:termination", "dep:num_cpus"]
wasm-web = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook", "dep:getrandom", "dep:colored"]
wasm-nodejs = ["wasm-web"]
wasm-bundler = ["wasm-web"]

[dependencies]
ego-tree = "0.6.2"
futures = "0.3.29"
html2md = "0.2.14"
itertools = "0.11.0"
regex = "1.10.2"
reqwest = "0.11.22"
scraper = "0.18.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
url = "2.4.1"
urlencoding = "2.1.3"


[dependencies.clap]
version = "4.4.7"
features = ["derive"]
optional = true

[dependencies.clap_complete]
version = "4.4.7"
optional = true

[dependencies.tokio]
version = "1.33.0"
features = ["full"]
optional = true

[dependencies.unicode-width]
version = "0.1.11"
optional = true

[dependencies.colored]
version = "2.0.0"
optional = true

[dependencies.indicatif]
version = "0.17.7"
optional = true

[dependencies.directories]
version = "5.0.1"
optional = true

[dependencies.sanitize-filename]
version = "0.5.0"
optional = true

[dependencies.human-panic]
version = "1.2.1"
optional = true

[dependencies.termination]
version = "0.1.2"
optional = true

[dependencies.num_cpus]
version = "1.16.0"
optional = true

[dependencies.getrandom ]
version = "0.2.14"
features = ["js"]
optional = true

[dependencies.wasm-bindgen]
version = "0.2.92"
optional = true

[dependencies.wasm-bindgen-futures]
version = "0.4.42"
optional = true

[dependencies.serde-wasm-bindgen]
version = "0.6.5"
optional = true

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
pretty_assertions = "1.4.0"

[profile.release]
opt-level = 'z' # Optimize for size.
lto = true # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
strip = "symbols" # Strip symbols from binar
